--- a/sass/openeyes/_ui.scss
+++ b/sass/openeyes/_ui.scss
@@ -15,6 +15,7 @@
 // Dates are wrapped with spans
 .oe-date {
 	text-align: right;
+	white-space: nowrap;
 	.day {
 		
 	}
